--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,6 @@
   --primary-color: #0029ff;
   --secondary-color: #000;
   --accent-color: #fff;
-
-  /* family */
-  --poppins: "Poppins", sans-serif;
 }
 
 /* base  */
@@ -20,7 +17,7 @@
 }
 
 body {
-  font-family: var(--poppins);
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
 }
 a {
@@ -92,4 +89,200 @@ ul {
 .header-details .avatar i {
   cursor: pointer;
   font-size: 1.2rem;
+}
+
+/* Main Content Design  */
+#main {
+  position: relative;
+}
+#main .main-content {
+  margin: 132px 82px;
+  position: relative;
+  border: 3px solid #f0f0f0;
+  border-radius: 7px;
+  overflow: hidden;
+}
+.main-content .content-header {
+  background-color: var(--primary-color);
+  color: var(--accent-color);
+  font-size: 1rem;
+  padding: 0.8rem;
+}
+
+.main-content .content-body {
+  padding: 0rem 2rem;
+  position: relative;
+}
+.content-body h4 {
+  text-align: center;
+  margin: 44px 0px;
+}
+
+.content-body .content-inner-body {
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  gap: 5rem;
+  padding: 0rem 2rem;
+  align-items: flex-start;
+  margin-bottom: 4rem;
+}
+.content-inner-body .content-box {
+  flex: 1;
+  position: relative;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
+  overflow: hidden;
+}
+.content-box .content-box__header {
+  background: var(--secondary-color);
+  color: var(--accent-color);
+  padding: 0.5rem;
+  text-align: center;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+.content-inner-body .content-box p {
+  font-size: 0.9rem;
+  line-height: 1.7;
+}
+.content-inner-body .content-box__body {
+  padding: 1rem;
+}
+.content-box__body .title {
+  position: relative;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 0.5rem 0rem;
+  margin-bottom: 1rem;
+}
+.content-box__body form {
+  padding: 0rem 1rem;
+}
+.content-box__body form .group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 1rem;
+}
+.input-group {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  box-sizing: border-box;
+  overflow: hidden;
+  border: 1px solid #fefefe;
+  padding: 0.2rem;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 3px;
+  margin-top: 0.4rem;
+}
+.input-group label {
+  font-size: 0.8rem;
+  padding: 0.4rem 0rem;
+  display: block;
+}
+.input-group textarea {
+  background: white;
+  padding: 0.6rem;
+  height: 70px;
+  border: none;
+  outline: none;
+  font-size: 0.9rem;
+  border-radius: 10px;
+  width: 100%;
+  resize: none;
+  margin-bottom: 0;
+}
+.input-group.tall textarea {
+  height: 130px;
+}
+.select-group {
+  margin: 1rem 0rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: flex-end;
+}
+.select-group select {
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  padding: 0.7rem 1rem;
+  border: 1px solid #fff;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid #f0f0f0;
+  font-family: poppins;
+}
+
+.add-thread-btn {
+  background: var(--primary-color);
+  padding: 0.6rem 1rem;
+  border-radius: 5px;
+  color: var(--accent-color);
+  border: none;
+  outline: none;
+  font-family: poppins;
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  margin-bottom: 1rem;
+}
+.credit-select {
+  margin: 1rem 0rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.credit-select div {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+.credit-select div i:last-child {
+  color: var(--primary-color);
+}
+.credit-select select {
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  padding: 0.7rem 1rem;
+  border: 1px solid #fff;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid #f0f0f0;
+  font-family: poppins;
+}
+.submit-btn {
+  position: relative;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.submit-btn button {
+  background: var(--primary-color);
+  padding: 0.6rem 1rem;
+  border-radius: 5px;
+  color: var(--accent-color);
+  border: none;
+  outline: none;
+  font-family: poppins;
+  cursor: pointer;
+}
+.submit-btn .save {
+  margin-top: 0.5rem;
+  font-size: 2rem;
+}
+.down {
+  text-align: right;
+  font-size: 1.6rem;
 }
