--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,7 @@ a {
 button {
   cursor: pointer;
 }
-ul {
-  list-style: none;
-}
+
 audio {
   width: 100%;
   border: 1px solid #ffff;
@@ -113,7 +111,6 @@ audio {
   position: relative;
   border: 3px solid #f0f0f0;
   border-radius: 7px;
-  overflow: hidden;
 }
 .main-content .content-header {
   background-color: var(--primary-color);
@@ -318,4 +315,51 @@ form.task-form-5 .input-group {
 .down {
   text-align: right;
   font-size: 1.6rem;
+}
+
+/* Site Dashboard  */
+.site-dashboard {
+  position: absolute;
+  left: -46%;
+  width: 300px;
+  background: #fff;
+
+  height: 20%;
+  box-shadow: 0px 0px 15px rgb(0 0 0 / 10%);
+  border-radius: 10px;
+  z-index: 1;
+  overflow: hidden;
+}
+.site-dashboard ol {
+  padding: 2rem;
+}
+.site-dashboard li {
+  border-bottom: 1px solid #e9e9e9;
+}
+.site-dashboard ol strong {
+  margin-bottom: 1rem;
+  display: block;
+  border-bottom: 1px solid #d8d8d8;
+}
+.site-dashboard ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.site-dashboard ul li a {
+  color: var(--secondary-color);
+}
+
+.site-dashboard .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 1.4rem;
+  padding: 1rem;
+  background-color: var(--primary-color);
+  color: var(--accent-color);
+}
+.site-dashboard .title .btn {
+  cursor: pointer;
 }
