--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ audio {
   display: flex;
   align-items: center;
   gap: 0.9rem;
+  list-style: none;
 }
 .header-details .menus li {
   cursor: pointer;
@@ -319,12 +320,12 @@ form.task-form-5 .input-group {
 
 /* Site Dashboard  */
 .site-dashboard {
-  position: absolute;
-  left: -46%;
+  position: fixed;
+  left: -12%;
   width: 300px;
   background: #fff;
 
-  height: 20%;
+  height: 60%;
   box-shadow: 0px 0px 15px rgb(0 0 0 / 10%);
   border-radius: 10px;
   z-index: 1;
