--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,9 +186,14 @@ audio {
   justify-content: space-between;
   width: 100%;
   gap: 1rem;
+  flex-wrap: wrap;
+}
+.group .input-group {
+  flex: 1;
 }
 .input-group {
   position: relative;
+
   width: 100%;
   text-align: center;
   background-color: #f0f0f0;
@@ -230,12 +235,18 @@ form.task-form-5 .input-group {
   margin: 0rem 3rem;
   width: auto;
 }
+form.task-form-5 .submit-btn,
+form.task-form-5 .example-btn {
+  margin: 0rem 3rem;
+}
+
 .select-group {
   margin: 1rem 0rem;
   display: flex;
   gap: 1rem;
   align-items: center;
   justify-content: flex-end;
+  flex-wrap: wrap;
 }
 .select-group select {
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
@@ -269,6 +280,8 @@ form.task-form-5 .input-group {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 .credit-select div {
   position: relative;
@@ -330,6 +343,10 @@ form.task-form-5 .input-group {
   border-radius: 10px;
   z-index: 1;
   overflow: hidden;
+  transition: all 0.5s ease;
+}
+.site-dashboard.active {
+  left: 0%;
 }
 .site-dashboard ol {
   padding: 2rem;
